[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/ui/PathConfigContainer.gd" type="Script" id=1]
[ext_resource path="res://res/theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://res/theme/file_dialog_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="PathConfigContainer" type="VBoxContainer"]
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_constants/separation = 8
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_right = 110.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 7
theme_type_variation = "PathConfigLabel"
text = "PathConfig"

[node name="Value" type="HBoxContainer" parent="."]
margin_top = 30.0
margin_right = 189.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="PopupButton" type="Button" parent="Value"]
unique_name_in_owner = true
margin_right = 43.0
margin_bottom = 32.0
focus_mode = 1
theme_type_variation = "FileDialogButton"
enabled_focus_mode = 1
text = "..."

[node name="PathEdit" type="LineEdit" parent="Value"]
unique_name_in_owner = true
margin_left = 47.0
margin_right = 189.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme_type_variation = "PathEdit"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_top = 70.0
margin_right = 539.0
margin_bottom = 470.0
rect_min_size = Vector2( 150, 400 )
theme = ExtResource( 3 )
popup_exclusive = true
resizable = true
access = 2
show_hidden_files = true

[node name="ExclusiveOverlay" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.843137 )
margin_top = 478.0
margin_right = 539.0
margin_bottom = 478.0
custom_styles/panel = SubResource( 1 )

[connection signal="pressed" from="Value/PopupButton" to="." method="_on_PopupButton_pressed"]
[connection signal="text_changed" from="Value/PathEdit" to="." method="_on_PathEdit_text_changed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
